# eaglefrac

./: .gitignore  CMakeLists.txt  README.md  notched.geo  notched_test.prm  pds.cc  three-point-bending.prm
input/: bending.prm  fluid-one_frac.prm  homog_frac.prm  notch_semicircle.geo  notched_test.prm  pressurized-branches.prm  pressurized-one_frac.prm  pressurized-sneddon.prm  pressurized-sneddon_4+5.prm  solid-notched_test.prm  solid-three_point_bending.prm  three-point-bending-ellipse.prm  three-point-bending.prm
lib/: BitMap.hpp  CMakeLists.txt  ConstitutiveModel.cc  ConstitutiveModel.hpp  InputData.cc  InputData.hpp  LinearSolver.cc  Mesher.hpp  PhaseFieldSolver.cc  PhaseFieldSolver.hpp  Postprocessing.hpp
mesh/: notch_semicircle.geo  notched.geo  unit_slit.msh
plotting/: plot-notched-test.py  plot_cod.py  plot_three_point_bending.py
src/: eaglefrac-acid.cc  eaglefrac-fluid.cc  eaglefrac-pressurized.cc  eaglefrac-solid.cc
src/lib/: BitMap.hpp  CMakeLists.txt  ConstitutiveModel.hpp  DecompositionHeister.hpp  FEFunction.hpp  InitialValues.hpp  InputData.hpp  LinearSolver.hpp  Mesher.hpp  Parsers.hpp  PhaseFieldPressurizedData.hpp  PhaseFieldSolver.hpp  Postprocessing.hpp  PressureSolver.hpp  Scheduler.hpp  SinglePhaseData.hpp  TemperatureSolver.hpp  Well.hpp  WidthSolver.hpp
